[tool.poetry]
name = "proxy_provider"
version = "0.1.0"
description = ""
authors = ["Hector Soria <attosoria@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.4"
tqdm = "^4.67.1"
colorlog = "^6.9.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.scripts]
proxy-provider = "proxy_provider.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
